[package]
name = "yex"
version = "0.1.0"
authors = ["Martin Schmettow <schmettow@web.de>"]
edition = "2021"
#rust-version = "1.75.0"

[lib]
name = "yex"
path = "src/yex/mod.rs"

[dependencies]
image = { version = "0.24", default-features = false, features = ["png"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
isolang = "2.4.0"
static_cell = "2.0.0"
futures = "0.3.30"
futures-timer = "3.0.2"
nannou = "0.19.0"
nannou_egui = "0.19.0"
rand_distr = "0.4.3"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
